# landing-genie

./: .bandit  .env.example  .gitignore  GEMINI.md  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
.gemini/: .geminiignore  settings.json  settings.json.orig
.wrangler/: contact-form-worker.toml
cloudflare/contact-form-worker/: wrangler.test.toml
cloudflare/contact-form-worker/src/: index.js
cloudflare/contact-form-worker/tests/: contact-worker.test.js  email-stub.js
landing_genie/: __init__.py  cli.py  cloudflare_api.py  config.py  gemini_runner.py  image_generator.py  preview.py  site_paths.py
prompts/: follow_up_questions_prompt.md  image_follow_up_questions_prompt.md  image_product_description.md  image_product_identity.md  image_product_slots_prompt.md  image_prompt.md  image_prompts_batch.md  image_visual_bible.md  refine_landing_prompt.md  runtime_generation_prompt.md  snippets.md
scripts/: dev-bootstrap.sh
tests/: test_cli_follow_ups.py  test_cloudflare_api.py  test_follow_up_questions.py  test_gemini_cli.py  test_image_generation.py  test_image_prompts.py  test_placeholder_assets.py  test_preview.py  test_product_slots.py  test_site_paths.py
tests/fixtures/: product_slots_inputs.json
